--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Broadway Design</title>
   </head>
   <body>
-    <div>
+    <div id="header">
       <h1>Broadway Design</h1>
         <nav>
           <p>Home</p>
@@ -18,13 +18,13 @@
     </div>
     <div>
       <h2>Our Process</h2>
-      <img src="">
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg">
       <h3>Identify</h3>
       <p>We focus on the most important details.</p>
-      <img src="">
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg">
       <h3>Understand</h3>
       <p>We study our projects inside and out.</p>
-      <img src="">
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg">
       <h3>Execute</h3>
       <p>We put everything we have into our work.</p>
     </div>
@@ -41,15 +41,8 @@
       <p>E-mail: test@example.com</p>
       <p>Twitter: @test</p>
     </div>
-    <div>
-      <h5>© Broadway 2017</h5>
-      <nav>
-        <p>Home</p>
-        <p>About</p>
-        <p>Work</p>
-        <p>Team</p>
-        <p>Contact</p>
-      </nav>
+    <div id="footer">
+      <p>© Broadway 2017 <span>Home About Work Team Contact</span></p>
     </div>
   </body>
 </html>
